<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>FormPagePregame</class>
 <widget class="QWidget" name="FormPagePregame">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1243</width>
    <height>811</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QWidget" name="gridLayoutWidget">
   <property name="geometry">
    <rect>
     <x>50</x>
     <y>40</y>
     <width>761</width>
     <height>481</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="3" column="0">
     <widget class="chat_input" name="chat_line"/>
    </item>
    <item row="1" column="0" colspan="5">
     <widget class="QTextEdit" name="output_window">
      <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item row="3" column="2">
     <widget class="QPushButton" name="bpick">
      <property name="text">
       <string>PushButton</string>
      </property>
     </widget>
    </item>
    <item row="0" column="0" colspan="3">
     <widget class="QTreeWidget" name="start_players_tree">
      <property name="contextMenuPolicy">
       <enum>Qt::CustomContextMenu</enum>
      </property>
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
      </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::ExtendedSelection</enum>
      </property>
      <property name="rootIsDecorated">
       <bool>false</bool>
      </property>
      <column>
       <property name="text">
        <string notr="true">1</string>
       </property>
      </column>
     </widget>
    </item>
    <item row="3" column="1">
     <widget class="QPushButton" name="bdisc">
      <property name="text">
       <string>PushButton</string>
      </property>
     </widget>
    </item>
    <item row="0" column="3" colspan="2">
     <widget class="pregame_options" name="pr_options" native="true"/>
    </item>
    <item row="3" column="4">
     <widget class="QPushButton" name="bstart">
      <property name="text">
       <string>PushButton</string>
      </property>
     </widget>
    </item>
    <item row="3" column="3">
     <widget class="QPushButton" name="bops">
      <property name="text">
       <string>PushButton</string>
      </property>
     </widget>
    </item>
    <item row="2" column="0" colspan="2">
     <widget class="pregamevote" name="pre_vote" native="true"/>
    </item>
   </layout>
  </widget>
 </widget>
 <customwidgets>
  <customwidget>
   <class>pregame_options</class>
   <extends>QWidget</extends>
   <header>pregameoptions.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>chat_input</class>
   <extends>QLineEdit</extends>
   <header>chatline.h</header>
  </customwidget>
  <customwidget>
   <class>pregamevote</class>
   <extends>QWidget</extends>
   <header>voteinfo_bar.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
